Minor backend changes (fbartra/web2-bartra-laine!18)